--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <!-- head definitions go here -->
-    <title>Example</title>
-    <script language="Javascript" type="text/javascript" src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-</head>
-<body>
-    <!-- the content goes here -->
-    <p>Imeges carousel</p>
-    <div class="carousel">
-        <button id="retroceder">Retroceder</button>
-        <div id="imagen"></div>
-        <button id="avanzar">Avanzar</button>
-    </div>
-    <div class="controles">
-        <button id="play">Play</button>
-        <button id="stop" disabled>Stop</button>
-    </div>
-</body>
+    <head>
+        <!-- head definitions go here -->
+        <title>Example</title>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    </head>
+    <body>
+        <!-- the content goes here -->
+        <p>Imeges carousel</p>
+        <div class="carousel">
+            <button id="retroceder">Retroceder</button>
+            <div id="imagen">
+            </div>
+            <button id="avanzar" >Avanzar</button>
+        </div>
+        <div class="controles">
+            <button id="play">Play</button>
+            <button id="stop" disabled>Stop</button>
+        </div>
+        <script language="Javascript" type="text/javascript" src="script.js"></script>  
+    </body>
 </html>
